springboot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: jvazquez0091/helado-api-app:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata: 
  name: springboot-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
