ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: api-ingress
  namespace: default
spec:
  rules:
    - host: api.jvazquez.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: springboot-service
                port: 
                  number: 80
